Integrate Firebase for assignments and enrollments
fix: Replaced mock data with Firebase Firestore integration for assignments and enrollments management.

feat: Added real-time CRUD operations for assignments, courses, users, and enrollments.

feat: Introduced user authentication with Firebase Auth, an account page, and improved admin dashboard with live statistics.
fix: Refactored enrollment management into dedicated pages and updated UI to reflect real-time data from Firestore.

--- a/android/.gitignore
+++ b/android/.gitignore
@@ -12,3 +12,6 @@ GeneratedPluginRegistrant.java
 key.properties
 **/*.keystore
 **/*.jks
+
+# Firebase configuration files
+/android/app/google-services.json
